# country-profiles-langgraph-deployment-server

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  langgraph.json  package-lock.json  package.json  pyproject.toml
frontend/: chat_remote.py
frontend/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/web/src/: App.tsx  api.js  app.js  feedback.js  index.css  main.js  main.tsx  markdown.js  sse-parser.js  vite-env.d.ts
frontend/web/src/components/feedback/: FeedbackWidget.tsx
frontend/web/src/components/layout/: AppShell.tsx  AuthGate.tsx  BottomBar.tsx  MobileActivitySheet.tsx  MobileSourcesSheet.tsx  NavBar.tsx  SourcesList.tsx  SourcesSidebar.tsx
frontend/web/src/components/ui/: button.tsx  (+3 more)
frontend/web/src/hooks/: ResearchContext.tsx  useClerkToken.ts  useResearch.ts  useSources.ts
frontend/web/src/lib/: api.ts  layers-placeholder.ts  markdown.ts  sample-topics.ts  sources.ts  sse-parser.ts
frontend/web/src/types/: research.ts
frontend/web/styles/: components.css  feedback.css  layout.css  report.css  tokens.css
scripts/filestore_scripts/: config.py  convert_pdfs.py  ground_truths_store.py  process_and_upload.py  setup_store.py  upload_to_store.py
server/: __init__.py  app.py  config.py  feedback_routes.py  langgraph_manager.py  models.py  proxy.py  server_proxy.py
server/middleware/: clerk_auth.py
src/: internal_researcher.py  main.js
src/country_profiles/: internal_researcher.py  research_assistant.py
src/filestore_scripts/: ground_truths_store.py  setup_store.py  upload_to_store.py
(+6 files in other folders)
